--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,14 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: Your Awesome Site
-email: your-email@domain.com
-author: Your Name
+url: https://francescorner.github.io
+title: Frances Corner Gardens
+email: frances.corner@gmail.com
+author: Frances Corner
 description: > # "Write an awesome description for your new site here. 
-  You can edit this line in _config.yml. It will appear in your document 
-  head meta (for Google search results) and in your feed.xml site 
-  description.
-copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
+  Reliable, friendly and creative gardening services from a passionate gardener.
+  Covering the Richmond, Key, Twickenham and Kingston area.
+copyright: 'Copyright &copy; 2019 Frances Corner. All Rights Reserved.'
 credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
 
 # ----------------------- #
