--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ email: frances.corner@gmail.com
 author: Frances Corner
 description: > # "Write an awesome description for your new site here. 
   Reliable, friendly and creative gardening services from a passionate gardener.
-  Covering the Richmond, Key, Twickenham and Kingston area.
+  Covering the Richmond, Kew, Twickenham and Kingston area.
 copyright: 'Copyright &copy; 2019 Frances Corner. All Rights Reserved.'
 credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
 
