--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ permalink: pretty
 social:
   - title: twitter
     url: https://twitter.com/SBootstrap
-  - title: github
+  - title: testing
     url: https://github.com/IronSummitMedia/startbootstrap
   - title: linkedin
     url: 
