--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,7 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
-    url: https://twitter.com/SBootstrap
-  - title: testing
-    url: https://github.com/IronSummitMedia/startbootstrap
-  - title: linkedin
-    url: 
+  - title: instagram
+    url: https://www.instagram.com/fcorner
+  - title: email
+    url: mailto:frances.corner@gmail.com
