--- a/_config.yml
+++ b/_config.yml
@@ -27,3 +27,5 @@ permalink: pretty
 social:
   - title: instagram
     url: https://www.instagram.com/fcorner
+  - title: email
+    url: mailto:frances.corner@gmail.com
