--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,4 @@ social:
     url: https://www.instagram.com/fcorner
   - title: email
     url: mailto:frances.corner@gmail.com
+    fa-icon: fa-envelope-square
