--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,5 @@ permalink: pretty
 social:
   - title: instagram
     url: https://www.instagram.com/fcorner
-  - title: email
+  - title: envelope
     url: mailto:frances.corner@gmail.com
-    fa-icon: envelope
