--- a/_config.yml
+++ b/_config.yml
@@ -30,5 +30,5 @@ social:
   - title: envelope
     url: mailto:frances.corner@gmail.com
   - title: email
-    fa-icon: envelope
+    fa-icon: fa-envelope
     url: mailto:frances.corner@gmail.com
