--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,6 @@ permalink: pretty
 
 social:
   - title: instagram
-    url: https://www.instagram.com/fcorner
+    url: https://www.instagram.com/frances_corner
   - title: email
     url: mailto:frances.corner@gmail.com
