--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: https://francescorner.github.io
+url: http://francescornergardens.co.uk
 title: Frances Corner Gardens
 email: frances.corner@gmail.com
 author: Frances Corner
